--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ version = "0.1.0"
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.5"
-yahoo_finance_api = { version = "1.1", features = ["blocking"] }
+tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
+yahoo_finance_api = { version = "1.2" }
