--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ version = "0.1.0"
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.5"
+futures-util = "0.3.18"
 tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
 yahoo_finance_api = { version = "1.2" }
